--- a/puphpet/config.yaml
+++ b/puphpet/config.yaml
@@ -3,7 +3,7 @@ vagrantfile:
     vm:
         provider:
             local:
-                box: bento/ubuntu-16.04
+                box: puphpet/ubuntu1604-x64
                 box_url: 'false'
                 box_version: '0'
                 chosen_virtualizer: virtualbox
